<resources>
    <string name="app_name">Yann Al Akl-MB1C7-TP2</string>
    <string name="login">login</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="jean_dupont">jean.dupont</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">CONNEXION</string>
    <string name="nouvel_utilisateur">Nouvel utilisateur</string>
    <string name="title">Second Activity</string>
    <string name="hello">Hello!</string>
    <string name="s_inscre">s\'inscre</string>
    <string name="inscription">inscription</string>
    <string name="comfirmer_mots_de_passe">comfirmer mots de passe</string>
    <string name="reinitialiser_le_mot_de_passe">Reinitialiser le mot de passe</string>
    <string name="nom_dutilisateur">Nom d\'utilisateur</string>
    <string name="changer_le_mot_de_passe">Changer le mot de passe</string>
    <string name="pokedex">Pokedex</string>
    <string name="name">name</string>
    <string name="url">url</string>
    <string name="pokemon">pokemon</string>
    <string name="total">total</string>

    <string name="pokemon_name">Name</string>
    <string name="pokemon_number">#</string>
    <string name="pokemon_types">Types</string>
    <string name="hp_label">HP: </string>
    <string name="atk_label">ATK: </string>
    <string name="def_label">DEF: </string>
    <string name="sp_atk_label">S.ATK: </string>
    <string name="sp_def_label">S.DEF: </string>
    <string name="speed_label">SPD: </string>
    <string name="total_label">TOTAL: </string>
    <string name="search_pokemon">Search Pokemon...</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmer_nouveau_mot_de_passe">Confirmer nouveau mot de passe</string>
    <string name="valider_le_changement">Valider le changement</string>
</resources>