<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_le_mot_de_passe"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/etInputUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/nom_d_utilisateur"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/nouveau_mot_de_passe"
        android:inputType="textPassword"
        android:maxLines="1"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/confirmer_nouveau_mot_de_passe"
        android:inputType="textPassword"
        android:maxLines="1"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/btnSavePassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/valider_le_changement" />

</LinearLayout>