<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/pokemon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId"
        tools:layout_editor_absoluteX="262dp" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/name"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="45dp" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/url"
        />
    <LinearLayout/>

